--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "rewrites": [
-    {
-      "source": "/((?!api/|assets/|favicon\\.ico|robots\\.txt|manifest\\.webmanifest|.*\\.(?:js|css|map|png|jpg|jpeg|gif|svg|webp|ico|txt|json|woff2?)$).*)",
-      "destination": "/index.html"
-    }
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
-
